k8s_manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: be-container
        image: 533267327230.dkr.ecr.eu-central-1.amazonaws.com/ep-be-images-dev:ep-httpd-be-image-dev
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 256Mi
            cpu: 250m
