k8s_manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
