k8s_manifests/public-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: public-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  selector:
    app: fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: fe
  selector:
    app: be
  ports:
    - protocol: TCP
      port: 8080
      targetPort: be
